# Simple-OpenGL-Image-Library

./: .gitignore  CMakeLists.txt
projects/VS2017/: SOIL.sln  SOIL.vcxproj
src/: SOIL.c
